# huskylib

./: .cvsignore  .gear-rules  .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  HISTORY  HuskylibDll.vcproj  INSTALL  INSTALL.md  License  Makefile  README.md  VERSION  afixcmd.c  afixcmd.h  afixcmn.c  appveyor.yml  arealist.c  arealist.h  crc.c  crc.h  cvsdate.h  fscmn.c  fscmn.h  huskylib.qpg  huskylib.spec  huskymak.cfg  log.c  log.h  makefile.cyg  makefile.inc  makefile.lnx  makefile.mvc  makefile.mvcdll  makefile.unx  recode.c  recode.h  suppress_base.json
debian/: changelog  control  copyright  libhusky-dev.files  libhusky-dev.links  libhusky0.shlibs  libhusky1.files  libhusky1.shlibs  rules
h/: calendar.h  compiler.h  cvtdate.h  ffind.h  huskylib.h  parsenn.h  patmat.h  strext.h  typedefs.h  vixie.h
huskylib/: BCD.h  BCO.h  BCW.h  BEOS5.h  BORLANDC.h  DJGPP.h  EMX.h  HIGHC.h  IBMC_OS2.h  MINGW32.h  MSC.h  MSVC.h  SASC.h  UNIX.h  WATCOMC.h  WCD.h  WCO.h  WCW.h  WCX.h  calendar.h  compiler.h  crc.h  cvtdate.h  dirlayer.h  fexist.h  ffind.h  ftnaddr.h  huskyext.h  huskylib.h  locking.h  log.h  memory.h  parsenn.h  patmat.h  pstdint.h  recode.h  strext.h  syslogp.h  temp.h  tree.h  (+5 more)
make/: HuskylibDll.70.vcproj  HuskylibDll.71.vcproj  HuskylibDll.8.vcproj  HuskylibDll.80.vcproj  HuskylibDll.90.vcproj  HuskylibDll.vcproj  gnmsgid.100.vcxproj  gnmsgid.2019.vcxproj  gnmsgid.2019.vcxproj.filters  gnmsgid.90.vcproj  huskylib.100.vcxproj  huskylib.100.vcxproj.filters  huskylib.2019.suppress  huskylib.2019.vcxproj  huskylib.2019.vcxproj.filters  makefile.aix  makefile.bcd  makefile.bco  makefile.bcw  makefile.be  makefile.bsd  makefile.bsd4  makefile.cyg  makefile.djg  makefile.emo  makefile.emx  makefile.hco  makefile.ibo  makefile.inc  makefile.lnx  makefile.mgw  makefile.mvc  makefile.mvcdll  makefile.qnx  makefile.rxw  makefile.sun  makefile.unx  makefile.watcom  makefile.wcx
man/: Makefile  gnmsgid.1
src/: adcase.c  calendar.c  cmpfname.c  crc.c  cvtdate.c  dirlayer.c  fexist.c  ffind.c  flush.c  ftnaddr.c  genmsgid.c  genverst.c  getfree.c  gnmsgid.c  ioutil.c  locking.c  log.c  mapfile.c  memory.c  parsenn.c  patmat.c  qksort.c  recode.c  setfsize.c  strext.c  strftime.c  tdelay.c  temp.c  tlog.c  tree.c  version.c  xstr.c
src/tests/: move_file.c  parseAddr.c  str_array.c  stripRoundingChars.c  timer.c
